--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 
 <body>
   <div class="container">
-    <div class="quadrado">
+    <div class="quadrado" id="quadrado">
       <div class="itens">
         <div class="tela customAlert" id="tela"></div>
         <ol class="calculadora">
-          <li class="button" id="number1">1</li>
-          <li class="button" id="number2">2</li>
-          <li class="button" id="number3">3</li>
-          <li class="button" id="number4">4</li>
-          <li class="button" id="number5">5</li>
-          <li class="button" id="number6">6</li>
-          <li class="button" id="number7">7</li>
-          <li class="button" id="number8">8</li>
-          <li class="button" id="number9">9</li>
-          <li class="button" id="number10">10</li>
-          <li class="button" id="soma">+</li>
-          <li class="button" id="subtracao">-</li>
-          <li class="button" id="multiplicao">X</li>
-          <li class="button" id="divisao">/</li>
-          <li class="button" id="click">=</li>
+          <button class="button" id="number1">1</button>
+          <button class="button" id="number2">2</button>
+          <button class="button" id="number3">3</button>
+          <button class="button" id="number4">4</button>
+          <button class="button" id="number5">5</button>
+          <button class="button" id="number6">6</button>
+          <button class="button" id="number7">7</button>
+          <button class="button" id="number8">8</button>
+          <button class="button" id="number9">9</button>
+          <button class="button" id="soma">+</button>
+          <button class="button" id="subtracao">-</button>
+          <button class="button none" id="multiplicao">X</button>
+          <button class="button" id="divisao">/</button>
+          <button class="button" id="click">=</button>
+          <button class="button esc" id="click">ESC</button>
         </ol>
       </div>
     </div>
